
ChangeLog
 [ + added, - removed, * changed ]
 * 01Dec2011 Improved support for DynInst (C&Fortran bugs in MT)
 * 01Dec2011 Improved support for instrumenting NANOS+MPI
 * 30Nov2011 Increased verbosity of papi_best_set
 * 28Nov2011 Fixed a bug that appeared when creating communicators
 * 14Nov2011 Added support to MAC OS X and improved support to FreeBSD
 * 07Nov2011 Extrae 2.2.0 is released!
 * 07Nov2011 Made --with-unwind, --with-papi, --with-mpi, --with-dyninst mandatory.
             Can be avoided through the respective --without.
 * 07Nov2011 Autodetect whether --enable-posix-clock is needed.
 * 25Oct2011 Adding thread names, starting by CUDA
 + 19Oct2011 Support for MPI+OpenMP applications using Dyninst launcher
 * 17Oct2011 Translation of @ of CUDA kernels into kernel names
 * 14Oct2011 Updating PACX instrumentation
 * 13Oct2011 Several OpenMP bugfixes. Added instrumentation for set/get num
             threads. Fixed hwc counts at openmp when counter set changes.
             Fixed timing routines when using multiple threads.
 * 08Sep2011 Several OpenMP bugfixes
 * 26Aug2011 Modified code to support virtual_thread (from nanos) to view
             nanos tasks as threads in paraver.
 * 23Aug2011 Updated examples and added DynInst examples to the user-guide.
 * 23Aug2011 Fixed LINUX/{SEQ,OMP} examples to use either DynInst or static
             instrumentation.
 * 23Aug2011 Fixed emitting HWC when HWC_CHANGE_EV also occurs. HWC values
             are 0 for the new set and also the HWC counters are not emitted
             at the same timestamp.
 * 23Aug2011 Added example for CUDA instrumentation
 * 01Aug2011 Added instrumentation of MPI_Get and MPI_Put
 * 29Jun2011 Modified SVN propset using
              svn propset svn:keywords "Date Revision Author HeadURL Id"

   * (29/Jun/2011) Added extrae_version.h to track in extrae_user_events.h the
                   current version of the instrumentation package