@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 03Jan2011 Support to instrument Intel OpenMP rte v11/v12 through LD_PRELOAD.
  * 01Dec2011 Improved support for DynInst (C&Fortran bugs in MT)
  * 01Dec2011 Improved support for instrumenting NANOS+MPI
  * 30Nov2011 Increased verbosity of papi_best_set
